# markov-abstractions-code-ijcai22

./: .gitignore  Pipfile  README.md  environment.yml  pyproject.toml  run.py  setup.py
experiments/: plot.py  plot_trace_lengths.py
experiments/scripts/: cheat_mab_k_3_dqn_abstraction.sh  cheat_mab_k_3_random_baseline.sh  cheat_mab_k_3_rmax_abstraction.sh  cheat_mab_k_3_rmax_baseline.sh  cheat_mab_k_4_dqn_abstraction.sh  cheat_mab_k_4_random_baseline.sh  cheat_mab_k_4_rmax_abstraction.sh  cheat_mab_k_4_rmax_baseline.sh  enemy_corridor_k_128_dqn_abstraction.sh  enemy_corridor_k_128_random_baseline.sh  enemy_corridor_k_128_rmax_abstraction.sh  enemy_corridor_k_128_rmax_baseline.sh  enemy_corridor_k_16_dqn_abstraction.sh  enemy_corridor_k_16_random_baseline.sh  enemy_corridor_k_16_rmax_abstraction.sh  enemy_corridor_k_16_rmax_baseline.sh  enemy_corridor_k_2_dqn_abstraction.sh  enemy_corridor_k_2_random_baseline.sh  enemy_corridor_k_2_rmax_abstraction.sh  enemy_corridor_k_2_rmax_baseline.sh  enemy_corridor_k_32_dqn_abstraction.sh  enemy_corridor_k_32_random_baseline.sh  enemy_corridor_k_32_rmax_abstraction.sh  enemy_corridor_k_32_rmax_baseline.sh  enemy_corridor_k_4_dqn_abstraction.sh  enemy_corridor_k_4_random_baseline.sh  enemy_corridor_k_4_rmax_abstraction.sh  enemy_corridor_k_4_rmax_baseline.sh  enemy_corridor_k_64_dqn_abstraction.sh  enemy_corridor_k_64_random_baseline.sh  enemy_corridor_k_64_rmax_abstraction.sh  enemy_corridor_k_64_rmax_baseline.sh  enemy_corridor_k_8_dqn_abstraction.sh  enemy_corridor_k_8_rmax_baseline.sh  (+70 more)
markov_abstractions/: policies.py  utils.py
(+529 files in other folders)
