[tool.poetry]
name = "markov-abstractions"
version = "0.1.0"
description = ""
authors = ["Gabriel Paludo Licks <gabrielplicks@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
graphviz = "^0.20.3"
numpy = "^1.26.4"
gym = "^0.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
